--- a/.github/workflows/build_template.yml
+++ b/.github/workflows/build_template.yml
@@ -1,3 +1,5 @@
+name: build_template
+
 on:
   schedule:
     - cron: '0 1 * * *'
@@ -18,6 +20,6 @@ jobs:
 
       - shell: pwsh
         run: |
-          & 'src/'script/powershell/script/Build-ConfigTemplate.ps1
+          & 'src/script/powershell/script/Build-ConfigTemplate.ps1'
 
       - uses: stefanzweifel/git-auto-commit-action@v5
