Update template building script and workflow.

--- a/.github/workflows/build_template.yml
+++ b/.github/workflows/build_template.yml
@@ -18,6 +18,7 @@ jobs:
 
       - shell: pwsh
         run: |
-          & 'src/'script/powershell/script/Build-ConfigTemplate.ps1
+          & 'src/script/powershell/script/Build-ConfigTemplate.ps1' `
+            -ResourceType
 
       - uses: stefanzweifel/git-auto-commit-action@v5
